# fl-module2-3

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  reset_enterprise.ps1  run_option3.ps1  run_option3_enterprise.ps1
.github/workflows/: ci.yml
data/: README.md
docs/: project_status_and_critique_2026-04-03.md
module1/: cli.py  dashboard_server.py  dashboard_ui.html  demo_launcher.py  run_client.py  verify_run.py
module1/common/: attack_simulator.py  comparison_report.py  data_partition.py  event_schema.py  event_storage.py  experiment_tracking.py  fedavg_strategy.py  flower_client.py  governance_bridge.py  local_models.py  model_hashing.py  partition_cache.py  report_images.py  round_event_security.py  trust_scoring.py  trust_weighted_strategy.py
module1/split1/: main.py
module1/split2/: flwr_app.py  main.py  run_flwr.ps1
module1/split3/: blockchain_sim.py  eth_gateway.py  fabric_gateway.py  governance.py  governance_policy.example.json  hlf_gateway.py  model_hasher.py  split3_main.py
module1/split3/contracts/: ModelRegistry.sol
module1/split3/hlf/: run_option3.ps1  setup.sh  teardown.sh
module1/split3/hlf/chaincode/trust_registry/: go.mod  go.sum  trust_registry.go
module1/split3/hlf_enterprise/: health_check.sh  run_option3_enterprise.ps1  setup.sh  teardown.sh
tests/: test_event_schema_storage.py  test_governance_verification.py  test_model_hasher_tamper.py  test_round_event_security.py  test_verify_run_command.py
