[project]
name = "batfl-final"
version = "0.1.0"
description = "BATFL: Blockchain-Based Dynamic Trust Modeling for Federated Fraud Detection"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
batfl = "module1.cli:main"
batfl-verify = "module1.verify_run:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flwr.app]
publisher = "local"

[tool.flwr.app.components]
serverapp = "module1.split2.flwr_app:server_app"
clientapp = "module1.split2.flwr_app:client_app"

[tool.flwr.app.config]
num_clients = 5
num_rounds = 20
model = "dnn"
use_synthetic = true
data_path = ""
alpha = 1.0
max_samples = ""
fraction_fit = 1.0
no_smote = false
attack = "none"
malicious = "1"
attack_start = 1
scale_factor = 5.0
log_dir = "logs_split2"
blockchain_enabled = false
blockchain_backend = "simulation"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["module1", "tests"]
